configuration global du projet et mise en place des models

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,73 @@
 # pycache
 __pycache__/
 
+# Personal folders
+__archives/
+__resources/
+docs/
+
+
+
 # env
 .env
+
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Database
+#*.db
+#*.sqlite3
+
+# Environment variables
+.env
+
+# Logs
+logs/
+*.log
+
+# Coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Alembic
+alembic/versions/*.py
+!alembic/versions/.gitkeep
+
+# OS
+.DS_Store
+Thumbs.db
+
+tests/
+scripts/
